force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/fields/LLC_BI__Total_Loan_and_Other_Costs__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Loan_and_Other_Costs__c</fullName>
    <description>The system automatically populates this optional field to indicate the aggregate total of all loan costs and other costs associated with the loan. By default, this field is blank.</description>
    <formula>LLC_BI__Total_Loan_Costs__c + LLC_BI__Total_Other_Costs__c</formula>
    <inlineHelpText>This system-populated field displays the aggregate total of all loan costs and other costs associated with the loan.</inlineHelpText>
    <label>Total Loan and Other Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>