force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/fields/LLC_BI__Total_Other_Costs__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Other_Costs__c</fullName>
    <description>The system automatically populates this optional field to indicate the aggregate total of other costs associated with the loan. By default, this field is blank.</description>
    <formula>LLC_BI__Total_Taxes_and_Other_Government_Fees__c + LLC_BI__Total_Prepaids__c + LLC_BI__Total_Initial_Escrow_Payment_at_Closing__c + LLC_BI__Total_Other__c</formula>
    <inlineHelpText>This system-populated field displays the aggregate total of other costs associated with the loan.</inlineHelpText>
    <label>Total Other Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>