force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/fields/LLC_BI__Total_Seller_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Seller_Fee_Amount__c</fullName>
    <description>This field is automatically populated when fees are added to the loan. This field represents the total amount of seller fees associated to the object.</description>
    <inlineHelpText>The total amount of seller fees associated to the object.</inlineHelpText>
    <label>Total Seller Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>