force-app/main/default/objects/LLC_BI__Fee_Loan_Aggregate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__Number_of_Fees__c</columns>
    <columns>LLC_BI__Number_of_Borrower_Fees__c</columns>
    <columns>LLC_BI__Number_of_Cash_Fees__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>